# cocoindex-code-mcp-server

./: .actrc  .env.compose  .env.template  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  ARCHON_INTEGRATION.md  CLAUDE.md  CRAWL4AI_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_TAG_FIX.md  Dockerfile  EMBEDDING_FIXES_SUMMARY.md  ENHANCEMENT_SUMMARY.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PERMISSION_FIX.md  README-MCP-SERVER.md  README.md  STATE-multi-language.md  STATE-old.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO-backlog.md  TODO-db-abstration.md  TODO-haskell.md  cocoindex-code-mcp-server.code-workspace  docker-compose.yml  init-pgvector.sql  pyproject.toml  pytest.ini  ruff.toml  run_tests.py  sample.env  setup.cfg
.devcontainer/: devcontainer.json
cocoindex_code_mcp_server/: _haskell_tree_sitter.pyi
compose/: qdrant.yaml
docs/: FILE_WATCHER_IMPLEMENTATION.md  LOCAL_TESTING.md
examples/: __init__.py  cocoindex_tool.py  code_embedding_demo.py  debug_ast.py  external_code_embedding_flow.py  minimal_mcp_test.py  multiple_sources_example.py  postgres_metadata.py  python_analyzer_example.py  test_claude_desktop_simulation.py  verify_embedding_implementation.py
rust/: Cargo.toml
scripts/: act-manylinux.sh  cocoindex-postgresql.sh  dmypy-auto-type-annotate.sh  format-python.sh  hybrid-search-with-coverage.sh  install-pgvector.py  mcp-server-with-coverage.sh  mcp-server.sh  misc.sh  mypy-check.sh  pytest-with-coverage.sh  sitecustomize.py
tests/: README_BASELINE_TESTS.md  README_DATABASE_INTEGRATION_TESTS.md  README_EXTENSION_TESTS.md  README_METADATA_TESTS.md  README_SEARCH_TESTS.md  common.py  conftest.py  db_comparison.py  mcp_client.py  search_config.py  search_test_flows.py  test_astchunk_library_usage.py  test_chunking_flow_integration.py  test_chunking_method_regression.py  test_cli_args.py  test_cocoindex_flow_direct.py  test_cocoindex_flow_execution.py  test_cocoindex_insertion_scenario.py  test_cocoindex_integration.py  test_code_embedding_standalone.py  test_duplicate_key_debug.py  test_embedding_database_insertion.py  test_embedding_functions_directly.py  test_external_code_embedding.py  test_external_embedding_standalone.py  test_haskell_kotlin_analysis_issues.py  test_json_formatting.py  test_language_normalization.py  test_live_updates.py  test_multiple_paths.py  (+4 more)
(+129 files in other folders)
