# This file is part of cocoindex_code_mcp_server from
# https://github.com/aanno/cocoindex-code-mcp-server
#
# Copyright (C) 2025 aanno <aanno@users.noreply.github.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = cocoindex_code_mcp_server
version = 0.1.0
description = RAG based on cocoindex as MCP server (streamingHttp), with Haskell support
author = aanno
author_email = aanno@users.noreply.github.com
license = AGPLv3+
# Optional: include this section for setuptools/distribution tools

[options]
#packages = find:
#install_requires =
#    # List your runtime Python dependencies here (one per line)
python_requires = >=3.11

[tool:isort]
# profile = "pep8"
profile = "black"
# max-line-length = 120

[tool:ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv", "build", "dist", "docs"]
# extend-ignore = ["E203", "W503"]  # common ignores for some formatters like black

[tool:pydocstyle]
line-length = 120

[tool:flake8]
max-line-length = 120
exclude = .git,__pycache__,.venv,build,dist,docs
extend-ignore = E203, W503  # common ignores for some formatters like black
max-complexity = 10         # warn if function is too complex
select = E,F,W,C            # E=errors, F=pyflakes, W=warnings, C=complexity

[tool:autoflake8]  # Autoflake8 supports config in setup.cfg
max-line-length = 120
remove-unused-variables = true
# remove-all-unused-imports = true
expand-star-imports = true

[tool:autopep8]
max_line_length = 120

[coverage:run]              # If using pytest-cov or coverage.py
branch = True
source =
    cocoindex_code_mcp_server

[tool:mypy]                      # If using type checking with mypy
python_version = 3.11
ignore_missing_imports = true
